= 1.2 = * Added option to prevent conflit with other plugins that maybe Removing/Adding action woocommerce_before_single_product_summary and woocommerce_product_thumbnails to insert their own gallery. * User can choose to "Enable WooCommerce default product image", SVI will work but may see some flickering when images change, this option is deactivated by default.
git-svn-id: https://plugins.svn.wordpress.org/smart-variations-images/trunk@1205551 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/woo_svi.css
+++ b/assets/css/woo_svi.css
@@ -14,6 +14,10 @@
 .woosvi_images .thumbnails {
     margin-left: 0px;
 }
+.woosvi_images .thumbnails.hidden {
+    display: none;
+    visibility: hidden;
+}
 .current_p_thumb {
     border: 1px solid #3c3c3b;
     margin-top: -2px !important;
@@ -27,3 +31,4 @@
     margin-right: 2.5%;
     margin-bottom: 1em;
 }
+
